# telegram-bot-template

./: .env.template  .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
config/: default.toml
src/: command.rs  error.rs  main.rs  settings.rs  text.rs
