[package]
name = "telegram-bot-template"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dotenv = "0.15.0"
env_logger = "0.8.3"
fst = "0.4.5"
sentry = "0.22.0"
sentry-anyhow = "0.22.0"
tbot = "0.6.7"
tokio = { version = "1.2.0", default-features = false, features = ["rt-multi-thread", "macros"] }
